--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
 #container {
 	width:80%;
 	margin:auto;
-	background-color: #B6B3B3;
+	background-color: #F9F9F9;
 	min-height: 800px;
 	position: relative;
 }
 
 #header{
 	width:100%;
-	background-color: #4CD2EF;
+	background-color: #00cff0;
 	height:150px;
 }
 
@@ -18,10 +18,11 @@
 
 #footer{
 	width:100%;
-	background-color: #4CD2EF;
+	background-color: #333;
 	height:75px;
 	position: absolute;
 	bottom: 0px;
+	color: #FFFFFF;
 }
 
 #logo{
@@ -57,7 +58,7 @@
 	margin:  0;
 }
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #4CD2EF;
+  background-color: #052469;
 }
 
 .dropdown-content {
@@ -79,7 +80,8 @@
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #00CFF0;
+	color: #FFFFFF;
 }
 
 .dropdown:hover .dropdown-content {
@@ -100,4 +102,8 @@ aside {
 aside img {
 	margin: 0 auto;
 	display:block;
+}
+body {
+	background-color:#00cff0;
+		background-image: linear-gradient( to bottom, #00cff0, white);
 }
